salesforce/retrieved/probe-dll-dates/objects/Date_DIMcsv__dll/Date_DIMcsv__dll.object-meta.xml
<CustomObject>
    <label>Date_DIM.csv</label>
    <mktDataLakeAttributes>
        <creationType>Custom</creationType>
        <isEnabled>true</isEnabled>
        <objectCategory>Salesforce_SFDCReferenceModel_0_93.Related</objectCategory>
    </mktDataLakeAttributes>
</CustomObject>