salesforce/retrieved/probe-dll-dates/objects/Date_DIMcsv__dll/fields/Holiday__c.field-meta.xml
<CustomField>
    <fullName>Holiday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Holiday</label>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>Custom</definitionCreationType>
        <externalName>Holiday</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>NONE</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Checkbox</type>
</CustomField>