salesforce/retrieved/probe-dll-dates/objects/Date_DIMcsv__dll/fields/KQ_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>KQ_Record_ID__c</fullName>
    <label>KQ_Record_ID</label>
    <length>60</length>
    <mktDataLakeFieldAttributes>
        <definitionCreationType>System</definitionCreationType>
        <externalName>KQ_Record_ID</externalName>
        <isEventDate>false</isEventDate>
        <isInternalOrganization>false</isInternalOrganization>
        <isRecordModified>false</isRecordModified>
        <usageTag>KEY_QUALIFIER</usageTag>
    </mktDataLakeFieldAttributes>
    <type>Text</type>
</CustomField>